--- a/css/business-casual.css
+++ b/css/business-casual.css
@@ -6,7 +6,7 @@
 
 body {
     font-family: "Open Sans","Helvetica Neue",Helvetica,Arial,sans-serif;
-    background: url('../assets/img/backgrounds/pexels-adi-k-3222192.jpg') no-repeat center center fixed;
+    background: url('../assets/img/backgrounds/BC-image.jpeg') no-repeat center center fixed;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     background-size: cover;
@@ -54,7 +54,7 @@ hr {
 }
 
 .img-full {
-    min-width: 100%;
+    width: 75%;
 }
 
 .brand-before,
@@ -102,11 +102,17 @@ hr {
     margin: 0 auto 0;
 }
 
+.clearfix::after {
+    content: "";
+    clear: both;
+    display: table;
+  }
+
 .img-center {
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    width: 50%;
+    float: none;
+    width: 32%;
+    /* padding: 5px;/ */
+    margin: 5px;
 }
 
 footer {
@@ -139,8 +145,11 @@ footer p {
 
     .img-left {
         float: left;
+        margin-left: 5%;
         margin-right: 25px;
-        height: auto;
+        margin-bottom: 25px;
+        height: 25%;
+        width: 25%;
         max-width: 50%;
     }
 
